--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,11 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Install Maven
+        run: |
+          sudo apt update
+          sudo apt install -y maven
+
       - name: Build with Maven
         run: mvn -B clean install
-
 
